# versioned_graph

./: CMakeLists.txt  README.txt  archive.h  backtracking.cpp  basic_tests.cpp  edges_list_test.cpp  edges_test.cpp  edges_test.h  example.cpp  example00.cpp  example01.cpp  example02.cpp  example1.1.cpp  example1.cpp  handler.h  history_holder.h  inner.cpp  isomorphism_checking.h  key.h  log.h  main.cpp  mapping.h  simple_key.h  simple_list_test.cpp  simple_test.cpp  simple_test.h  subgraph.h  subgraph_test.cpp  subgraph_test.h  tests.h  topological_sort.cpp  unordered_history_holder.h  utils.h  versioned_adjacency_list_test.cpp  versioned_adjacency_matrix_test.cpp  versioned_graph.h  versioned_graph_backtracking.cpp  versioned_graph_impl.h  versioned_graph_non_members.h  versioned_graph_test.h  (+3 more)
