cmake_minimum_required(VERSION 2.6)
project(BackTracking)
enable_testing()
find_package (Threads)

ADD_DEFINITIONS ( -Wall -DDEBUG -pedantic -Wextra -std=c++1y -g -ftemplate-backtrace-limit=0 )

ADD_DEFINITIONS ( -DTEST_ONLY_LIST )
add_executable(VerticesTestList vertices_list_test.cpp archive.h  handler.h  history_holder.h  log.h  tests.h vertices_test.h )
add_executable(EdgesTestList edges_list_test.cpp archive.h  handler.h  history_holder.h  log.h  tests.h edges_test.h mapping.h utils.h)
add_executable(SimpleTestList simple_list_test.cpp archive.h  handler.h  history_holder.h  log.h  tests.h simple_test.h simple_key.h unordered_history_holder.h)
add_executable(SubGraphTest subgraph.h subgraph_test.h subgraph_test.cpp)
add_executable(BackTrackingTest backtracking.cpp)
add_executable(InnerTest versioned_graph.h versioned_graph_test.h versioned_graph_impl.h versioned_graph_non_members.h inner.cpp)
add_executable(VersionedAdjacencyMatrixTest versioned_graph.h versioned_graph_test.h versioned_graph_impl.h  versioned_adjacency_matrix_test.cpp)
add_executable(VersionedAdjacencyListTest versioned_graph.h versioned_graph_non_members.h versioned_adjacency_list_test.cpp)
add_executable(TopologicalSortTest topological_sort.cpp)
#add_executable(VersionedGraphBacktrackingTest versioned_graph_backtracking.cpp)

target_link_libraries(VerticesTestList gtest gtest_main pthread)
target_link_libraries(EdgesTestList gtest gtest_main pthread)
target_link_libraries(SimpleTestList gtest gtest_main pthread)
target_link_libraries(SubGraphTest gtest gtest_main pthread)
target_link_libraries(BackTrackingTest gtest gtest_main pthread)
target_link_libraries(InnerTest gtest gtest_main pthread)
target_link_libraries(TopologicalSortTest gtest gtest_main pthread)
target_link_libraries(VersionedAdjacencyMatrixTest gtest gtest_main pthread)
target_link_libraries(VersionedAdjacencyListTest gtest gtest_main pthread)
#target_link_libraries(VersionedGraphBacktrackingTest gtest gtest_main pthread)


ADD_DEFINITIONS ( -DTEST_ONLY_VEC )
add_executable(VerticesTestVec vertices_test.cpp archive.h  handler.h  history_holder.h  log.h  tests.h key.h)
add_executable(EdgesTestVec edges_test.cpp archive.h  isomorphism_checking.h handler.h  history_holder.h  log.h  tests.h)
add_executable(SimpleTestVec simple_test.cpp archive.h  handler.h  history_holder.h  log.h  tests.h)

target_link_libraries(VerticesTestVec gtest gtest_main pthread)
target_link_libraries(EdgesTestVec gtest gtest_main pthread)
target_link_libraries(SimpleTestVec gtest gtest_main pthread)

add_test(NAME Simple COMMAND SimpleTestVec)
add_test(NAME SimpleList COMMAND SimpleTestList)
add_test(NAME Vertices COMMAND VerticesTestVec)
add_test(NAME VerticesList COMMAND VerticesTestList)
add_test(NAME Edges COMMAND EdgesTestVec)
add_test(NAME EdgesList COMMAND EdgesTestList)
add_test(NAME SubGraph COMMAND SubGraphTest)
add_test(NAME BackTracking COMMAND BackTrackingTest)
add_test(NAME Inner COMMAND InnerTest)
add_test(NAME VersionedAdjacencyMatrix COMMAND VersionedAdjacencyMatrixTest)
add_test(NAME VersionedAdjacencyList COMMAND VersionedAdjacencyListTest)
add_test(NAME TopologicalSort COMMAND TopologicalSortTest)
#add_test(NAME VersionedGraphBacktracking COMMAND VersionedGraphBacktrackingTest)
